--- a/coupon/templates/coupon/barcode_tag.html
+++ b/coupon/templates/coupon/barcode_tag.html
@@ -1,2 +1,2 @@
-<img class="barcode-img responsive-img" src="http://api-bwipjs.rhcloud.com/?bcid=code128&text=%5EFNC1{{ barcode }}&parsefnc&alttext={{ barcode }}" alt="{{ barcode }}" /> 
+<img class="barcode-img responsive-img" src="http://bwipjs-api.metafloor.com/?bcid=code128&text=%5EFNC1{{ barcode }}&parsefnc&alttext={{ barcode }}" alt="{{ barcode }}" /> 
 
