Upgraded to latest dependencies

--- a/commons/templates/commons/error404.html
+++ b/commons/templates/commons/error404.html
@@ -1,5 +1,5 @@
 {% extends 'commons/base.html' %} 
-{% load staticfiles %} 
+{% load static %} 
 
 {% block customcss %}
 <link rel="stylesheet" type="text/css" href="{% static 'commons/css/error404.css' %}">
