--- a/coupon/templates/coupon/coupon_list.html
+++ b/coupon/templates/coupon/coupon_list.html
@@ -1,5 +1,5 @@
 {% extends 'coupon/base.html' %}
-{% load staticfiles %} 
+{% load static %} 
 
 {% block customcss %}
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
