--- a/coupon/templates/coupon/generate.html
+++ b/coupon/templates/coupon/generate.html
@@ -1,4 +1,4 @@
-{% extends 'coupon/base.html' %} {% load staticfiles %} {% load barcode_tags %} 
+{% extends 'coupon/base.html' %} {% load static %} {% load barcode_tags %} 
 
 {% block customcss %} 
 <link rel="stylesheet" type="text/css" href="{% static 'coupon/css/generate.css' %}"> 
