--- a/coupon/templates/coupon/used_coupon.html
+++ b/coupon/templates/coupon/used_coupon.html
@@ -1,5 +1,6 @@
 {% extends 'coupon/base.html' %} 
-{% load staticfiles %} 
+{% load static %}
+
 {% block customcss %}
 <link rel="stylesheet" type="text/css" href="{% static 'coupon/css/used_coupon.css' %}"> 
 {% endblock %} 
