--- a/coupon/templates/coupon/generate.html
+++ b/coupon/templates/coupon/generate.html
@@ -33,7 +33,7 @@ span#like-us-text {
         <div class="col-sm-12">
             <div id="coupon-container">
                 <div class="print-bar">
-                    <button type="button" class="btn btn-success btn-sm no-print" onClick="window.print();">
+                    <button type="button" class="btn btn-success btn-sm btn-custom no-print" onClick="window.print();">
                         <span class="glyphicon glyphicon-print"></span> Print
                     </button>
                     <span class="no-print" id="instructions">print or present coupon on your mobile device!
@@ -44,11 +44,7 @@ span#like-us-text {
                     {% bc_from_text %}  
                 </div>
 
-            </div>
-            <div class="no-print center">
-                <span id="like-us-text">Like us on Facebook! <span class="glyphicon glyphicon-heart"></span></span>
-                <div class="fb-like" data-href="https://www.facebook.com/menchiesoakridges/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
-            </div>
+            </div> 
         </div>  
         
     </div>
@@ -104,15 +100,6 @@ $('#myModal').modal('show');
 $("#coupon-container").on("click", function() {
     $('#imagepreview').attr('src', $('.barcode-img').attr('src'));
     $('#imagemodal').modal('show');
-});
-
-(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9&appId=971705052963305";
-    fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
+}); 
 </script>
 {% endblock %}
